Updated the Login.js and Login.scss; Added Images

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- Title -->
-    <title>Dentalist - Dental Clinic React Website</title>
+    <title>Lamp Kiddie School</title>
   </head>
 
   <body>
